--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,6 +1,8 @@
 
-    @mixin for--mobile {
-        @media (max-width: 767px) { @content; }
+      
+      // to add specific behaviors that only pertain to mobile the mobile mixin was created
+      @mixin for--mobile {
+        @media (max-width: 767px) { @content; } 
       }
       @mixin for--tablet {
         @media (min-width: 768px)  { @content; }
