--- a/styles/shows.css
+++ b/styles/shows.css
@@ -1,23 +1,23 @@
 @font-face {
-  font-family: "Avenir Regular";
+  font-family: "Avenir";
   src: url("../assets/fonts/AvenirNextLTPro.ttf");
-  font-weight: normal;
+  font-weight: 300;
   font-style: normal;
 }
 @font-face {
-  font-family: "Avenir Demi";
+  font-family: "Avenir";
   src: url("../assets/fonts/AvenirNextLTProDemi.ttf");
-  font-weight: bold;
-  font-style: normal;
+  font-weight: 400;
+  font-style: bold;
 }
 @font-face {
-  font-family: "Avenir Bold";
+  font-family: "Avenir";
   src: url("../assets/fonts/AvenirNextLTProBold.ttf");
-  font-weight: bolder;
-  font-style: normal;
+  font-weight: 700;
+  font-style: bolder;
 }
 h1 {
-  font-family: "Avenir Regular", sans-serif;
+  font-family: "Avenir", sans-serif;
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
@@ -25,7 +25,7 @@ h1 {
 }
 @media (min-width: 768px) {
   h1 {
-    font-family: "Avenir Demi", sans-serif;
+    font-family: "Avenir", sans-serif;
     font-size: 3.75rem;
     line-height: 4.25rem;
     font-weight: 700;
@@ -34,7 +34,7 @@ h1 {
 }
 
 h2 {
-  font-family: "Avenir Regular", sans-serif;
+  font-family: "Avenir", sans-serif;
   font-size: 1.875rem;
   line-height: 2rem;
   font-weight: 700;
@@ -42,7 +42,7 @@ h2 {
 }
 @media (min-width: 768px) {
   h2 {
-    font-family: "Avenir Demi", sans-serif;
+    font-family: "Avenir", sans-serif;
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 600;
@@ -51,7 +51,7 @@ h2 {
 }
 
 h3 {
-  font-family: "Avenir Demi", sans-serif;
+  font-family: "Avenir", sans-serif;
   font-size: 1rem;
   line-height: 1.375rem;
   font-weight: 500;
@@ -59,7 +59,7 @@ h3 {
 }
 @media (min-width: 1280px) {
   h3 {
-    font-family: "Avenir Demi", sans-serif;
+    font-family: "Avenir", sans-serif;
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 600;
@@ -68,7 +68,7 @@ h3 {
 }
 @media (min-width: 768px) {
   h3 {
-    font-family: "Avenir Regular", sans-serif;
+    font-family: "Avenir", sans-serif;
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: lighter;
@@ -77,23 +77,24 @@ h3 {
 }
 
 .font__body, h4, p, a {
-  font-family: "Avenir Regular", sans-serif;
+  font-family: "Avenir", sans-serif;
   font-size: 0.875rem;
   line-height: 1.25rem;
-  font-weight: 400;
+  font-weight: 300;
   margin: 0;
 }
 @media (min-width: 768px) {
   .font__body, h4, p, a {
-    font-family: "Avenir Regular", sans-serif;
+    font-family: "Avenir", sans-serif;
     font-size: 0.875rem;
     line-height: 1.375rem;
-    font-weight: 400;
+    font-weight: 300;
     margin: 0;
   }
 }
 
 html body {
+  font-family: "Avenir";
   margin: 0 0;
   box-sizing: border-box;
   overflow-x: hidden;
@@ -191,7 +192,6 @@ html body {
   border-bottom: 5px;
   border-color: #fff;
   border-style: none none solid none;
-  font-family: "Avenir Demi";
 }
 @media (min-width: 768px) {
   .navbar__list--item li:hover, .navbar__list--item a:hover {
@@ -213,7 +213,6 @@ html body {
   border-bottom: 5px;
   border-color: #fff;
   border-style: none none solid none;
-  font-family: "Avenir Demi";
   pointer-events: none;
 }
 @media (min-width: 768px) {
@@ -232,7 +231,6 @@ html body {
   border-bottom: 5px;
   border-color: #fff;
   border-style: none none solid none;
-  font-family: "Avenir Demi";
   pointer-events: none;
 }
 @media (min-width: 768px) {
@@ -282,7 +280,7 @@ html body {
   }
 }
 
-.hero__cover-b {
+.hero__cover--b {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -296,11 +294,11 @@ html body {
   position: relative;
 }
 @media (min-width: 768px) {
-  .hero__cover-b {
+  .hero__cover--b {
     height: 50vw;
   }
 }
-.hero__cover-b--organizer {
+.hero__cover--b--organizer {
   display: flex;
   justify-content: flex-start;
   color: #fff;
@@ -308,12 +306,12 @@ html body {
   width: 90vw;
 }
 @media (max-width: 767px) {
-  .hero__cover-b--organizer {
+  .hero__cover--b--organizer {
     flex-direction: column;
   }
 }
 @media (min-width: 768px) {
-  .hero__cover-b--organizer {
+  .hero__cover--b--organizer {
     display: flex;
     justify-content: center;
     color: #fff;
@@ -321,12 +319,12 @@ html body {
     width: 90vw;
   }
 }
-.hero__cover-b--organizer--item {
+.hero__cover--b--organizer--item {
   margin-top: 20px;
   position: relative;
   z-index: 2;
 }
-.hero__cover-b--organizer:before {
+.hero__cover--b--organizer:before {
   content: "";
   position: absolute;
   top: 0;
@@ -336,25 +334,27 @@ html body {
   background-color: rgba(50, 50, 50, 0.5);
 }
 @media (max-width: 767px) {
-  .hero__cover-b--organizer {
+  .hero__cover--b--organizer {
     padding-bottom: 1.5rem;
     margin-bottom: 1.5rem;
   }
 }
-.hero__cover-b--title {
+.hero__cover--b--title {
   padding-top: 2vw;
   color: #fff;
   position: relative;
   z-index: 2;
 }
-.hero__cover-b--title--pre-hero {
+.hero__cover--b--title--pre-hero {
+  font-family: "Avenir";
+  font-weight: 400;
   position: relative;
   z-index: 2;
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: 400;
 }
 @media (min-width: 768px) {
-  .hero__cover-b--title--pre-hero {
+  .hero__cover--b--title--pre-hero {
     font-size: 1.75rem;
   }
 }
@@ -447,6 +447,8 @@ html body {
 }
 .footer__container--text-modifier,
 .footer__container p {
+  font-family: "Avenir";
+  font-weight: 300;
   color: #fff;
 }
 @media (max-width: 767px) {
@@ -472,10 +474,9 @@ html body {
 .footer__container p--subtext a {
   text-decoration: none;
   color: #fff;
-  font-family: "Avenir Regular", sans-serif;
   font-size: 0.813rem;
   line-height: 1.125rem;
-  font-weight: 400;
+  font-weight: 300;
   margin: 0 0;
   transition: all 0.5s ease-in-out;
 }
@@ -484,10 +485,6 @@ html body {
   .footer__container p--subtext a {
     font-size: 1.125rem;
   }
-}
-.footer__container--text-modifier--subtext a:hover,
-.footer__container p--subtext a:hover {
-  font-family: "Avenir Demi", sans-serif;
 }
 @media (min-width: 1280px) {
   .footer__container--text-modifier--subtext a:hover,
@@ -518,17 +515,11 @@ html body {
 .footer__container p--items--copyright--header {
   visibility: hidden;
 }
-@media (min-width: 768px) {
-  .footer__container--text-modifier--items--text-wrapper,
-  .footer__container p--items--text-wrapper {
-    font-family: "Avenir Demi", sans-serif;
-  }
-}
 @media (min-width: 1280px) {
-  .footer__container--text-modifier--items--text-wrapper,
-  .footer__container p--items--text-wrapper {
-    font-family: "Avenir Demi", sans-serif;
+  .footer__container--text-modifier--items--text-box,
+  .footer__container p--items--text-box {
     font-size: 1.125rem;
+    font-weight: 700;
   }
 }
 .footer__container__social {
@@ -584,8 +575,8 @@ html body {
     margin-bottom: 0px;
   }
 }
-.show__column__date {
-  font-weight: 700;
+.show__column__date, .show__column__venue, .show__column__location {
+  font-weight: 300;
 }
 @media (min-width: 768px) {
   .show__column__date, .show__column__venue, .show__column__location {
@@ -601,11 +592,13 @@ html body {
     visibility: hidden;
   }
 }
+.show__column__date {
+  font-weight: 700;
+}
 .show__title {
   padding: 2vw 0vw;
   font-size: 2rem;
   font-weight: 700;
-  font-family: "Avenir Demi", sans-serif;
 }
 @media (min-width: 1280px) {
   .show__title {
@@ -627,8 +620,8 @@ html body {
   .show__title--grid--horizontal {
     display: flex;
     width: 22vw;
-    font-family: "Avenir Demi";
     font-size: 1rem;
+    font-weight: 400;
     color: #afafaf;
   }
 }
@@ -664,18 +657,17 @@ html body {
   border-bottom: 2px solid #e1e1e1;
 }
 
-.shows-container {
-  font-family: "Avenir Regular", sans-serif;
+.shows__container {
   line-height: 2rem;
   font-weight: 300;
 }
 @media (min-width: 768px) {
-  .shows-container {
+  .shows__container {
     margin-left: 3vw;
   }
 }
 @media (min-width: 1280px) {
-  .shows-container {
+  .shows__container {
     margin-left: 20vw;
     max-width: 65vw;
   }
