--- a/styles/partials/_comments.scss
+++ b/styles/partials/_comments.scss
@@ -9,9 +9,8 @@
         background-color: #fff;
 
         &--content {
-            font-family: 'Avenir Regular', sans-serif;
             line-height: 1.125rem;
-            font-weight: 400;
+            font-weight: 300;
 
             @include for--tablet {
                 width: 75vw;
@@ -56,7 +55,7 @@
         border-radius: 4px;
         width: 100%;
         resize: none;
-        @include font-styles($font-regular, 0.875rem, 1.25rem, 400);
+        @include font-styles($font, 0.875rem, 1.25rem, 300);
 
         &--name {
             justify-content: center;
@@ -122,7 +121,7 @@
         font-family: 'Avenir Regular', sans-serif;
         font-size: 0.813rem;
         line-height: 1.125rem;
-        font-weight: 400;
+        font-weight: 300;
     }
 
     &__item {
@@ -247,11 +246,9 @@
 }
 
 .comments {
-
-    font-family: 'Avenir Regular', sans-serif;
     font-size: 0.813rem;
     line-height: 1.125rem;
-    font-weight: 400;
+    font-weight: 300;
 }
 
 .comment__like {
@@ -303,7 +300,7 @@
     margin-top: -7px;
     margin-left: -7px;
     color: $primary__band-white;
-    font-weight: bold;
+    font-weight: 700;
     transform: translate(-50%, -50%);
     width: 30px;
     height: 30px;
